--- a/archives.html
+++ b/archives.html
@@ -21,6 +21,8 @@
 <h1>Archives for Da blog</h1>
 
 <dl>
+    <dt>Sun 03 December 2017</dt>
+    <dd><a href="/man-plus-machine.html">Man Plus Machine</a></dd>
     <dt>Fri 03 December 2010</dt>
     <dd><a href="/my-first-review.html">My First Review</a></dd>
 </dl>
