--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p>In <a href="/category/review.html">Review</a>.</p>
 
 </footer><!-- /.post-info -->                <p>Following is a review of my favorite mechanical keyboard.</p>
-                <a class="readmore" href="/my-first-review.html">read more</a>
+                <a class="readmore" href="/my-firs-review.html">read more</a>
                 </div><!-- /.entry-content -->
             </article></li>
                 </ol><!-- /#posts-list -->
